# debops

./: .ansible-lint  .codespell.exclude  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .yamllint  CHANGELOG.md  CHANGELOG.rst  CHANGES.rst  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTING.rst  COPYRIGHT  CREDITS  DEVELOPMENT.rst  Dockerfile  INSTALL.rst  MANIFEST.in  Makefile  PKGBUILD  README.md  README.rst  TODO  TODO.md  TODO.rst  UPGRADE.rst  Vagrantfile  backup.sh  debops-policy.rst  defaults.sh  host.sh  inventory-vagrant  newhost.sh  pyproject.toml  requirements-dev.txt  (+10 more)
.github/: semantic.yml
.reuse/: dep5
LICENSES/: BSD-4-Clause.txt  MIT.txt
ansible/: galaxy.yml
contrib/: bootstrap-ansible.sh  bootstrap-ginas.py  bootstrap-ginas.sh
debops/: __init__.py  api.py  config.py  padlock-script
defaults/: main.yml
doc/: creating-a-local-apt-server-to-use-backports.rst  service-ports.rst  using-linux-containers.rst  using-the-custom-scripts.rst  versions.rst
docs/: Makefile  acme-integration.rst  acme-support.rst  ansible-integration.rst  api-reference-v0.rst  api-reference.rst  code-signing-policy.rst  code-signing.rst  code-standards-policy.rst  conf.py  configuration-layout.rst  configuration.rst  copyright.rst  credits.rst  custom-environment.rst  custom-features.rst  custom-files.rst  custom-hooks.rst  defaults-config.rst  defaults-configuration.rst  defaults-detailed.rst  defaults-maincf.rst  defaults-mastercf.rst  defaults-server.rst  defaults.rst  dependency.rst  design.rst  (+33 more)
(+10204 files in other folders)
