[sdist]
formats=gztar

[bdist]
formats=egg

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[aliases]
home = develop --install-dir ~/lib/python/ --script-dir ~/bin
devel = develop --multi-version --install-dir bin
daily = egg_info --tag-svn-revision --tag-build=dev bdist sdist
release = egg_info sdist register upload upload_docs
