# Copyright (C) 2014      Hartmut Goebel <h.goebel@crazy-compilers.com>
# Copyright (C) 2014-2018 Maciej Delmanowski <drybjed@gmail.com>
# Copyright (C) 2014-2018 DebOps <https://debops.org/>
# SPDX-License-Identifier: GPL-3.0-or-later

[sdist]
formats=gztar

[bdist]
formats=egg

[bdist_wheel]
universal = 1

[metadata]
license_files = LICENSES/*.txt

[aliases]
home = develop --install-dir ~/lib/python/ --script-dir ~/bin
devel = develop --multi-version --install-dir bin
daily = egg_info --tag-svn-revision --tag-build=dev bdist sdist
release = egg_info sdist register upload upload_docs
